--- a/csce242/index.html
+++ b/csce242/index.html
@@ -1,212 +1,228 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
 <head>
-    <title> CSCE 242: La'Morra Strong</title>
+    <title>CSCE 242: La'Morra Strong</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
         <h1>CSCE 242: Web Applications</h1>
         <h2>La'Morra Strong</h2>
         <p>Introduction to designing and developing web applications using HTML, CSS, and JavaScript.</p>
-        <p>
-            <a href="https://github.com/PeteyS17/PeteyS17.github.io/tree/main/csce242">
-                View My GitHub Repository
-            </a>
-        </p>
+        <p><a href="https://github.com/PeteyS17/PeteyS17.github.io/tree/main/csce242">View My GitHub Repository</a></p>
     </header>
+
     <main>
+
+        <!-- ASSIGNMENTS SECTION -->
         <h2>Assignments</h2>
         <div class="assignments">
-            <!-- Assignment 1 -->
+
             <div class="card">
                 <img src="images/HTML.png" alt="Basic HTML Screenshot">
                 <div class="card-content">
                     <h3><a href="assignments/01html/index.html">Assignment 1: Basic HTML</a></h3>
-                    <p>This project introduced me to HTML basics by creating a simple webpage using headings, paragraphs, links, and images.</p>
+                    <p>Learned basic webpage building using HTML.</p>
                 </div>
             </div>
 
-            <!-- Assignment 2 -->
             <div class="card">
                 <img src="images/CSS.png" alt="Basic CSS Screenshot">
                 <div class="card-content">
                     <h3><a href="assignments/02css/index.html">Assignment 2: Basic CSS</a></h3>
-                    <p>In this assignment, I styled my webpage with CSS, adding colors, margins, and fonts to improve design and readability.</p>
+                    <p>Styled a webpage using CSS colors, fonts, and spacing.</p>
                 </div>
             </div>
 
-            <!-- Assignment 3-->
             <div class="card">
                 <img src="images/pagelayout.png" alt="Page Layout Screenshot">
                 <div class="card-content">
                     <h3><a href="assignments/03pagelayout/index.html">Assignment 3: Page Layout</a></h3>
-                    <p>This project focused on using Flexbox to create a responsive page layout that adjusts for desktop and mobile screens.</p>
+                    <p>Used Flexbox to create a responsive layout.</p>
                 </div>
             </div>
-            <!-- Assignment 4-->
+
             <div class="card">
-                <img src="images/4.png" alt="recreate css">
+                <img src="images/4.png" alt="Recreate CSS">
                 <div class="card-content">
                     <h3><a href="assignments/04recreatecss/">Assignment 4: Recreate CSS</a></h3>
-                    <p>This project focused on using Flexbox to create a responsive page layout that adjusts for desktop and mobile screens.</p>
+                    <p>Recreated a layout using CSS.</p>
                 </div>
             </div>
-            <!-- Assignment 5-->
+
             <div class="card">
-                <img src="images/05.png" alt="Basic HTML Screenshot">
+                <img src="images/05.png" alt="JavaScript Screenshot">
                 <div class="card-content">
                     <h3><a href="assignments/05javascript/index.html">Assignment 5: JavaScript</a></h3>
-                    <p>This assignment was the start of me using JavaScript </p>
+                    <p>First JavaScript interactions.</p>
                 </div>
             </div>
-            <!-- Assignment 6-->
+
             <div class="card">
-                <img src="images/assignment06.png" alt="Basic HTML Screenshot">
+                <img src="images/assignment06.png" alt="Conditionals Screenshot">
                 <div class="card-content">
                     <h3><a href="assignments/06conditionals/index.html">Assignment 6: Conditionals</a></h3>
-                    <p>This assignment was me using JavaScript to make a Digital clock and flower lifeline </p>
+                    <p>Created a digital clock and a flower lifeline using conditionals.</p>
                 </div>
             </div>
-            <!-- Assignment 7-->
+
             <div class="card">
-                <img src="images/loops1.png" alt="Basic HTML Screenshot">
+                <img src="images/loops1.png" alt="Loops Screenshot">
                 <div class="card-content">
                     <h3><a href="assignments/07loops/loops.html">Assignment 7: Loops</a></h3>
-                    <p>This assignment was me using loops to make a day and night scene  </p>
+                    <p>Animated a day/night scene using loops.</p>
                 </div>
             </div>
-            <!-- Assignment 8-->
+
             <div class="card">
-                <img src="images/assignment8.png" alt="Basic HTML Screenshot">
+                <img src="images/assignment8.png" alt="Arrays Screenshot">
                 <div class="card-content">
                     <h3><a href="assignments/08arrays/arrays.html">Assignment 8: Arrays</a></h3>
-                    <p>This assignment was me using arrays for a hamster and gerbil Adoption.  </p>
-                </div>
-            </div>
-            <!-- Assignment 9-->
-            <div class="card">
-                <img src="images/ass09.png" alt="Basic HTML Screenshot">
-                <div class="card-content">
-                    <h3><a href="assignments/09classes/index.html">Assignment 9: classes</a></h3>
-                    <p>This assignment was me using classes with art paintings  </p>
+                    <p>Used arrays to build a pet adoption page.</p>
                 </div>
             </div>
 
-            
-
-            <!-- Assignment 10-->
             <div class="card">
-                <img src="images/Screenshot 2025-10-16 at 12.11.19 PM.png" alt="Basic HTML Screenshot">
+                <img src="images/ass09.png" alt="Classes Screenshot">
                 <div class="card-content">
-                    <h3><a href="assignments/09classes/index.html">Setup 2: Hello World</a></h3>
-                    <a href="https://github.com/PeteyS17/server-helloworld#"> Code Repo</a>
-                    <a href="https://server-helloworld-iit2.onrender.com"> Live Demo</a>
+                    <h3><a href="assignments/09classes/index.html">Assignment 9: Classes</a></h3>
+                    <p>Displayed art using JavaScript classes.</p>
                 </div>
             </div>
+
+            <div class="card">
+                <img src="images/Screenshot 2025-10-16 at 12.11.19 PM.png">
+                <div class="card-content">
+                    <h3>Setup 2: Hello World</h3>
+                    <p>
+                        <a href="https://github.com/PeteyS17/server-helloworld">Code Repo</a><br>
+                        <a href="https://server-helloworld-iit2.onrender.com">Live Demo</a>
+                    </p>
+                </div>
+            </div>
+
         </div>
 
-
-        <!-- Projects Section -->
+        <!-- PROJECTS SECTION -->
         <h2 id="projects">Projects</h2>
         <div class="projects">
-            <!-- Project Step 1 -->
+
+            <!-- STEP 1–12 CARDS: ALL FIXED -->
+
             <div class="card">
-                <img src="images/topic.png" alt="PDF Icon">
+                <img src="images/topic.png">
                 <div class="card-content">
-                    <h3><a href="projects/part1/BeyondBorders.pdf" target="_blank">Step 1: Topic Proposal </a></h3>
-                    <p>For this part 1 choose to do a travel guru proposal</p>
+                    <h3><a href="projects/part1/BeyondBorders.pdf" target="_blank">Step 1: Topic Proposal</a></h3>
+                    <p>Travel Guru proposal.</p>
                 </div>
             </div>
 
-            <!-- Project Step 2 -->
             <div class="card">
-                <img src="images/Mockitt2.png" alt="Wireframe Screenshot">
+                <img src="images/Mockitt2.png">
                 <div class="card-content">
                     <h3><a href="projects/wireframes/index.html" target="_blank">Step 2: Wireframe</a></h3>
-                    <p>Here is the embedded wireframe for my project.</p>
+                    <p>Wireframe layout.</p>
                 </div>
             </div>
-            <!-- Project Step 3 -->
+
             <div class="card">
-                <img src="images/part3.png" alt="Wireframe Screenshot">
+                <img src="images/part3.png">
                 <div class="card-content">
-                    <h3><a href="projects/part3/index.html" target="_blank">Step 3: HTML and CSS</a></h3>
-                    <p>Here is the html and css for my project.</p>
+                    <h3><a href="projects/part3/index.html" target="_blank">Step 3: HTML & CSS</a></h3>
+                    <p>Project structure created.</p>
                 </div>
             </div>
-            <!-- Project Step 4 -->
+
             <div class="card">
-                <img src="images/part4.png" alt="Colors, Pictures, and Text Screenshot">
+                <img src="images/part4.png">
                 <div class="card-content">
-                    <h3><a href="projects/part4/index.html" target="_blank">Step 4: Colors, Pictures, and Text</a></h3>
-                    <p>Here is the Colors, Pictures, and Text for my project.</p>
+                    <h3><a href="projects/part4/index.html" target="_blank">Step 4: Colors, Pictures, Text</a></h3>
+                    <p>Added visuals and text.</p>
                 </div>
             </div>
-            <!-- Project Step 5 -->
+
             <div class="card">
-                <img src="images/part5.png" alt="Fixing up Website">
+                <img src="images/part5.png">
                 <div class="card-content">
                     <h3><a href="projects/part5/index.html" target="_blank">Step 5: Fixing Up Website</a></h3>
-                    <p>fixing up my Website.</p>
+                    <p>Improved layout and design.</p>
                 </div>
             </div>
-            <!-- Project Step 6 -->
+
             <div class="card">
-                <img src="images/part6.png" alt="Fixing up Website">
+                <img src="images/part6.png">
                 <div class="card-content">
                     <h3><a href="projects/part6/index.html" target="_blank">Step 6: JSON Parsing</a></h3>
-                    <p>fixing up my Website.</p>
+                    <p>Added JSON data.</p>
                 </div>
             </div>
-            <!-- Project Step 7 -->
+
             <div class="card">
-                <img src="images/Screenshot 2025-10-16 at 11.40.52 PM.png" alt="Fixing up Website">
+                <img src="images/Screenshot 2025-10-16 at 11.40.52 PM.png">
                 <div class="card-content">
                     <h3><a href="projects/part7/about-us.html" target="_blank">Step 7: Contact Form</a></h3>
                     <p>Added contact form.</p>
                 </div>
             </div>
-            <!-- Project Step 8 -->
+
             <div class="card">
-                <img src="images/Screenshot 2025-10-26 at 11.02.05 PM.png" alt="Fixing up Website">
+                <img src="images/Screenshot 2025-10-26 at 11.02.05 PM.png">
                 <div class="card-content">
                     <h3><a href="https://peteys17.github.io/beyondboaders" target="_blank">Step 8: React App</a></h3>
-                    <p>Added contact form.</p>
+                    <p>Initial React app.</p>
                 </div>
             </div>
-            <!-- Project Step 8 -->
+
             <div class="card">
-                <img src="images/Screenshot 2025-10-26 at 11.02.05 PM.png" alt="Fixing up Website">
+                <img src="images/Screenshot 2025-10-26 at 11.02.05 PM.png">
                 <div class="card-content">
-                    <h3><a href="https://peteys17.github.io/beyondboaders" target="_blank">Step 9: React App Toggle <nav></nav></a></h3>
-                    <h3><a href="https://github.com/PeteyS17/beyondboaders" target="_blank"> New GitHub <nav></nav></a></h3>
+                    <h3>Step 9: React App Toggle</h3>
+                    <p><a href="https://github.com/PeteyS17/beyondboaders" target="_blank">New GitHub</a></p>
                 </div>
             </div>
-             <!-- Project Step 8 -->
-             <div class="card">
-                <img src="images/Screenshot 2025-10-26 at 11.02.05 PM.png" alt="Fixing up Website">
+
+            <div class="card">
+                <img src="images/Screenshot 2025-10-26 at 11.02.05 PM.png">
                 <div class="card-content">
-                    <h3><a href="https://peteys17.github.io/beyondboaders/" target="_blank">Step 10: react server side  <nav></nav></a></h3>
-                    <h3><a href="https://github.com/PeteyS17/beyondboaders" target="_blank">  GitHub <nav></nav></a></h3>
-                    <h3><a href="https://server-destinations.onrender.com" target="_blank">server render:  <nav></nav></a></h3>
-                    <h3><a href="https://github.com/PeteyS17/server-destinations" target="_blank">  server GitHub <nav></nav></a></h3>
+                    <h3>Step 10: React Server Side</h3>
+                    <p>
+                        <a href="https://peteys17.github.io/beyondboaders/" target="_blank">React App</a><br>
+                        <a href="https://server-destinations.onrender.com" target="_blank">Server Render</a><br>
+                        <a href="https://github.com/PeteyS17/server-destinations">Server GitHub</a>
+                    </p>
                 </div>
             </div>
-            <!-- Project Step 11 -->
-             <div class="card">
-                <img src="images/Screenshot 2025-11-16 at 11.41.49 PM.png" alt="Fixing up Website">
+
+            <div class="card">
+                <img src="images/Screenshot 2025-11-16 at 11.41.49 PM.png">
                 <div class="card-content">
-                    <h3><a href="https://peteys17.github.io/beyondboaders/" target="_blank">Step 11: Post request  <nav></nav></a></h3>
-                    <h3><a href="https://github.com/PeteyS17/beyondboaders" target="_blank">  GitHub <nav></nav></a></h3>
-                    <h3><a href="https://server-destinations.onrender.com" target="_blank">server render:  <nav></nav></a></h3>
-                    <h3><a href="https://github.com/PeteyS17/server-destinations" target="_blank">  server GitHub <nav></nav></a></h3>
+                    <h3>Step 11: POST Request</h3>
+                    <p>
+                        <a href="https://peteys17.github.io/beyondboaders/" target="_blank">React App</a><br>
+                        <a href="https://server-destinations.onrender.com" target="_blank">Server</a><br>
+                        <a href="https://github.com/PeteyS17/server-destinations">Server GitHub</a>
+                    </p>
                 </div>
+            </div>
+
+            <div class="card">
+                <img src="images/Screenshot 2025-10-26 at 11.02.05 PM.png">
+                <div class="card-content">
+                    <h3>Step 12: Edit & Delete</h3>
+                    <p>
+                        <a href="https://peteys17.github.io/beyondboaders/" target="_blank">React App</a><br>
+                        <a href="https://server-destinations.onrender.com" target="_blank">Server</a><br>
+                        <a href="https://github.com/PeteyS17/server-destinations">Server GitHub</a>
+                    </p>
+                </div>
+            </div>
+
         </div>
     </main>
 
     <footer>
-<p>&copy; PeteyS17.github.io </p>
+        <p>&copy; PeteyS17.github.io</p>
     </footer>
 
 </body>
