--- a/csce242/index.html
+++ b/csce242/index.html
@@ -108,7 +108,7 @@
         <h2 id="projects">Projects</h2>
         <div class="projects">
 
-            <!-- STEP 1–12 CARDS: ALL FIXED -->
+           
 
             <div class="card">
                 <img src="images/topic.png">
@@ -190,6 +190,7 @@
                         <a href="https://peteys17.github.io/beyondboaders/" target="_blank">React App</a><br>
                         <a href="https://server-destinations.onrender.com" target="_blank">Server Render</a><br>
                         <a href="https://github.com/PeteyS17/server-destinations">Server GitHub</a>
+                        <a href="https://github.com/PeteyS17/beyondboaders">Client GitHub</a>
                     </p>
                 </div>
             </div>
@@ -202,18 +203,20 @@
                         <a href="https://peteys17.github.io/beyondboaders/" target="_blank">React App</a><br>
                         <a href="https://server-destinations.onrender.com" target="_blank">Server</a><br>
                         <a href="https://github.com/PeteyS17/server-destinations">Server GitHub</a>
+                        <a href="https://github.com/PeteyS17/beyondboaders">Client GitHub</a>
                     </p>
                 </div>
             </div>
 
             <div class="card">
-                <img src="images/Screenshot 2025-10-26 at 11.02.05 PM.png">
+                <img src="images/Screenshot 2025-11-30 at 9.54.33 PM.png">
                 <div class="card-content">
                     <h3>Step 12: Edit & Delete</h3>
                     <p>
                         <a href="https://peteys17.github.io/beyondboaders/" target="_blank">React App</a><br>
                         <a href="https://server-destinations.onrender.com" target="_blank">Server</a><br>
                         <a href="https://github.com/PeteyS17/server-destinations">Server GitHub</a>
+                        <a href="https://github.com/PeteyS17/beyondboaders">Client GitHub</a>
                     </p>
                 </div>
             </div>
