--- a/csce242/index.html
+++ b/csce242/index.html
@@ -221,6 +221,19 @@
                 </div>
             </div>
 
+            <div class="card">
+                <img src="images/Screenshot 2025-11-30 at 9.54.33 PM.png">
+                <div class="card-content">
+                    <h3>Step 13: Mongo</h3>
+                    <p>
+                        <a href="https://peteys17.github.io/beyondboaders/" target="_blank">React App</a><br>
+                        <a href="https://server-destinations.onrender.com" target="_blank">Server</a><br>
+                        <a href="https://github.com/PeteyS17/server-destinations">Server GitHub</a>
+                        <a href="https://github.com/PeteyS17/beyondboaders">Client GitHub</a>
+                    </p>
+                </div>
+            </div>
+
         </div>
     </main>
 
